# erobs

./: .flake8  .gitignore  .isort.cfg  LICENSE  README.md  build.sh  erobs_minimal_fork.code-workspace  pyproject.toml  robot_calibration.yaml  setup.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/actions/lint/: run.sh
.github/actions/test/: run.sh
.github/workflows/: black.yml  flake8.yml  isort.yml  ros.yaml
docker/: README.md  docker-compose.yml
docker/azure-kinect/: 99-k4a.rules  Dockerfile  README.md  entrypoint.sh
docker/bsui/: Dockerfile  bsui  bsui.bash
docker/erobs-common-img/: Dockerfile  README.md
docker/erobs_hello_moveit/: Dockerfile
docker/hello-world/: Dockerfile  entrypoint.sh
docker/hello_world/: Dockerfile
docker/pdf-launch-scripts/: README.md  bsui-launch.sh  hello-talker.sh  mtc-moveit-launch.sh  robotiq-driver-entrypoint.sh  robotiq-driver-launch.sh  sample-movement-server-launch.sh  sample-movement-server.launch  simple_listener.py  ur-driver-launch.sh  ur-hande-driver-launch.sh
docker/pdf_beamtime/: Dockerfile
docker/ur-driver/: Dockerfile  entrypoint.sh
docker/ur-example/: Dockerfile
docker/ur-hande-control/: Dockerfile
docker/ur-hande-draft/: Dockerfile
docker/ur-moveit/: Dockerfile  entrypoint.sh
docker/ursim/: Dockerfile
docker/ursim/programs/: default.installation  default.variables  external_control.script  external_control.txt  external_control.urp
docs/: ArUco_detection.md  Robustness_tests.md  State_flow.md
src/: ros2.repos
src/aruco_pose/: CMakeLists.txt  README.md  package.xml
src/aruco_pose/config/: camera_param.yaml  fiducial_marker_param.yaml
src/aruco_pose/include/aruco_pose/: aruco_pose.hpp
src/aruco_pose/launch/: aruco_pose.launch.py
src/aruco_pose/src/: aruco_pose.cpp  aruco_pose_fixed_cam.cpp  redis_insert.py
src/bluesky_ros/: ophyd_ros.py  pdf_beamtime.py  pdf_beamtime_demo.py  re_demo.py
src/erobs_robot_driver/launch/: ur_control.launch.py
src/gripper_service/: CMakeLists.txt  package.xml
src/gripper_service/include/gripper_service/: gripper_service.hpp
src/gripper_service/src/: gripper_close.cpp  gripper_open.cpp  gripper_service.cpp
src/hello_moveit/: CMakeLists.txt  package.xml
src/hello_moveit/config/: pick_place_repeat_params.yaml  waypoints.yaml
src/hello_moveit/launch/: pick_place_repeat.launch.py
src/hello_moveit/src/: hello_moveit.cpp  move_to_pose.cpp  parameter_demo.cpp  pick_place_repeat_client.py  pick_place_repeat_server.cpp  pose_subscriber.cpp
src/hello_moveit_interfaces/: CMakeLists.txt  package.xml
src/hello_moveit_interfaces/action/: PickPlaceRepeat.action  SimpleActionMsg.action
src/kinect_recorder/: CMakeLists.txt  package.xml
src/kinect_recorder/include/kinect_recorder/: kinect_recorder.hpp
src/kinect_recorder/src/: kinect_recorder.cpp
src/pdf_beamtime/: CMakeLists.txt  README.md  package.xml
src/pdf_beamtime/acceptance_tests/: bluesky_interrupt_resume.py  bluesky_interrupt_stop.py
src/pdf_beamtime/config/: joint_poses.yaml  obstacles.yaml  pick_place_repeat_params.yaml
src/pdf_beamtime/include/pdf_beamtime/: finite_state_machine.hpp  inner_state_machine.hpp  internal_state.hpp  pdf_beam_env.hpp  pdf_beamtime_fidpose_server.hpp  pdf_beamtime_server.hpp  simple_server.hpp  state_enum.hpp  tf_utilities.hpp
src/pdf_beamtime/launch/: pdf_beamtime.launch.py  pdf_beamtime_fidpose_server.launch.py  pick_place.launch.py
src/pdf_beamtime/src/: beamtime_entrypoint.cpp  beamtime_fidpose_entrypoint.cpp  bluesky_interrupt.py  finite_state_machine.cpp  hello_moveit.cpp  inner_state_machine.cpp  internal_state.cpp  pdf_beam_env.cpp  pdf_beamtime_client.py  pdf_beamtime_fidpose_client.py  pdf_beamtime_fidpose_redis_client.py  pdf_beamtime_fidpose_server.cpp  pdf_beamtime_server.cpp  pdf_beamtime_server_tests.cpp  pick_place_repeat_client.py  pick_place_repeat_server.cpp  pick_place_server.cpp  simple_client.py  simple_server.cpp  tf_utilities.cpp
src/pdf_beamtime_interfaces/: CMakeLists.txt  package.xml
src/pdf_beamtime_interfaces/action/: FidPoseControlMsg.action  PickPlaceControlMsg.action
src/pdf_beamtime_interfaces/srv/: BlueskyInterruptMsg.srv  BlueskyOverrideMsg.srv  BoxObstacleMsg.srv  CylinderObstacleMsg.srv  DeleteObstacleMsg.srv  GriiperControlMsg.srv  GripperControlMsg.srv  NewObstacleMsg.srv  UpdateObstacleMsg.srv
src/pose_service/: CMakeLists.txt  README.md  package.xml
src/pose_service/config/: camera_param.yaml  fiducial_marker_param.yaml
src/pose_service/include/pose_service/: pose_service.hpp
src/pose_service/launch/: pose_service.launch.py
src/pose_service/src/: pose_service.cpp
src/robotiq_driver/: CMakeLists.txt  package.xml
src/robotiq_driver/include/robotiq_driver/: crc.hpp  gripper_service.hpp  hardware_interface.hpp  robotiq_gripper_interface.hpp
src/robotiq_driver/src/: gripper_service.cpp  hardware_interface.cpp  robotiq_gripper_interface.cpp
src/ur3e_hande_moveit_config/: CMakeLists.txt  README.md  package.xml
src/ur3e_hande_moveit_config/config/: joint_limits,yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ur_servo.yaml
src/ur3e_hande_moveit_config/srdf/: ur.srdf
src/ur3e_hande_robot_description/: CMakeLists.txt  README.md  package.xml
src/ur3e_hande_robot_description/config/: initial_positions.yaml
src/ur3e_hande_robot_description/config/camera_mount/: physical_parameters.yaml
src/ur3e_hande_robot_description/config/hande/: default_kinematics.yaml  physical_parameters.yaml  visual_parameters.yaml
src/ur3e_hande_robot_description/config/ur3e/: default_kinematics.yaml  joint_limits.yaml  physical_parameters.yaml  visual_parameters.yaml
src/ur3e_hande_robot_description/launch/: check_urdf.launch.py
src/ur3e_hande_robot_description/urdf/: camera_mount.xacro  hande.xacro  hande_black.xacro  hande_coupler.xacro  hande_extension.urdf.xacro  robotiq_hande.urdf.xacro  ur.ros2_control.xacro  ur.urdf.xacro  ur_macro.xacro  ur_with_camera.xacro  ur_with_camera_hande.xacro  ur_with_hande.xacro
src/ur3e_hande_robot_description/urdf/inc/: ur_common.xacro  (+1 more)
(+8 files in other folders)
