<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur3e_hande_moveit_config</name>
  <version>0.0.0</version>
  <description>Configuration parameters of the combined robotic system of hand-e gripper and ur3e robot arm</description>
  <maintainer email="wfernando1@bnl.gov">wfernando1</maintainer>
  <license>BSD-3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
